--- a/Itgm/Itgm/Views/ContentPage.xaml
+++ b/Itgm/Itgm/Views/ContentPage.xaml
@@ -19,7 +19,11 @@
             <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
-        <Grid Grid.Row="0" Background="Transparent">
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="40"/>
+            <ColumnDefinition/>
+        </Grid.ColumnDefinitions>
+        <Grid Grid.Row="0" Grid.ColumnSpan="3" Background="Transparent">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="auto"/>
                 <ColumnDefinition Width="90"/>
@@ -76,6 +80,50 @@
                         Text="{Binding User.FollowingCount, StringFormat={}{0:#,#0}&#x0a;подписок}"/>
             
         </Grid>
-        <ContentControl Grid.Row="1" Margin="5" Content="{Binding CurrentContent, Mode=OneWay}"/>
+        <ListView Grid.Row="1" Grid.Column="0" 
+                  Margin="0,5,0,5"
+                  Padding="-1"
+                  Background="Transparent"
+                  BorderThickness="0"
+                  SelectedIndex="{Binding ContentIndex, FallbackValue=1}">
+            <ListView.Resources>
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="BorderThickness" Value="0" />
+                    <Setter Property="BorderBrush" Value="Transparent" />
+                    <Setter Property="HorizontalContentAlignment" Value="Center" />
+                    <Setter Property="Padding" Value="5" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate TargetType="{x:Type ListViewItem}">
+                                <Grid Height="40" Background="{TemplateBinding Background}">
+                                    <ContentPresenter Content="{TemplateBinding Content}" 
+                                          Margin="{TemplateBinding Padding}"
+                                          VerticalAlignment="{TemplateBinding VerticalContentAlignment}"
+                                          HorizontalAlignment="{TemplateBinding HorizontalContentAlignment}">
+                                    </ContentPresenter>
+                                </Grid>
+                                <ControlTemplate.Triggers>
+                                    <Trigger Property="IsMouseOver" Value="true">
+                                        <Setter Property="Background" Value="{StaticResource TwitterMainThemeBrush}"/>
+                                    </Trigger>
+                                    <Trigger Property="IsSelected" Value="true">
+                                        <Setter Property="Background" Value="DimGray"/>
+                                    </Trigger>
+                                </ControlTemplate.Triggers>
+
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </ListView.Resources>
+            
+            <ListViewItem>
+                <Image Source="..\\Images/comments.ico"/>
+            </ListViewItem>
+            <ListViewItem>
+                <Image Source="..\\Images/lightning.ico"/>
+            </ListViewItem>
+        </ListView>
+        <ContentControl Grid.Row="1" Grid.Column="1" Margin="0,5,5,5" Content="{Binding CurrentContent, Mode=OneWay}"/>
     </Grid>
 </UserControl>
