--- a/Itgm/Itgm/MainWindow.xaml
+++ b/Itgm/Itgm/MainWindow.xaml
@@ -7,7 +7,7 @@
         xmlns:vm="clr-namespace:Itgm.ViewModels"
         xmlns:v="clr-namespace:Itgm.Views"
         Title="Itgm"
-        Icon="Images/itgm_16.png"
+        Icon="Images/instagram.ico"
         BorderThickness="1,0,1,1"
         BorderBrush="#68768A"
         WindowStartupLocation="CenterScreen"
