--- a/Itgm/Itgm/Themes/Generic.xaml
+++ b/Itgm/Itgm/Themes/Generic.xaml
@@ -5,6 +5,7 @@
                     xmlns:converters="clr-namespace:Itgm.Converters">
     <ResourceDictionary.MergedDictionaries>
         <ResourceDictionary Source="Brushes.xaml"/>
+        <ResourceDictionary Source="Fonts.xaml"/>
     </ResourceDictionary.MergedDictionaries>
     
     <!--Converters-->
@@ -31,7 +32,7 @@
 
     <!--Control templates-->
     <ControlTemplate x:Key="VerticalScrollBar" TargetType="{x:Type ScrollBar}">
-        <Grid Width="15">
+        <Border Width="15" Background="{TemplateBinding Background}" BorderBrush="{TemplateBinding BorderBrush}">
             <Track Name="PART_Track" IsDirectionReversed="True" ViewportSize="NaN">
                 <Track.Thumb>
                     <Thumb Height="28">
@@ -39,16 +40,14 @@
                             <Style TargetType="{x:Type Thumb}">
                                 <Setter Property="IsTabStop" Value="False"/>
                                 <Setter Property="Focusable" Value="False"/>
-                                <Setter Property="VerticalAlignment" Value="Top"/>
-                                <Setter Property="HorizontalAlignment" Value="Left"/>
                                 <Setter Property="Height" Value="30"/>
-                                <Setter Property="Opacity" Value="0.9"/>
+                                <Setter Property="Opacity" Value="0.7"/>
                                 <Setter Property="Template">
                                     <Setter.Value>
                                         <ControlTemplate TargetType="{x:Type Thumb}">
                                             <Path Data="M0,0L0,1" 
                                                   Stretch="Fill" 
-                                                  Stroke="{StaticResource TwitterTweetBackgroundBrush}" 
+                                                  Stroke="{Binding BorderBrush, RelativeSource={RelativeSource AncestorType=Border}}" 
                                                   StrokeThickness="8" 
                                                   Height="28"
                                                   StrokeStartLineCap="Round" 
@@ -58,7 +57,7 @@
                                 </Setter>
                                 <Style.Triggers>
                                     <Trigger Property="IsMouseOver" Value="true">
-                                        <Setter Property="Opacity" Value="1"/>
+                                        <Setter Property="Opacity" Value="0.9"/>
                                     </Trigger>
                                 </Style.Triggers>
                             </Style>
@@ -66,12 +65,12 @@
                     </Thumb>
                 </Track.Thumb>
             </Track>
-        </Grid>
+        </Border>
     </ControlTemplate>
 
     <!--Defined styles-->
     <Style x:Key="DefaultWindowStyle" TargetType="{x:Type Window}">
-        <Setter Property="Background" Value="{StaticResource TwitterTweetBackgroundBrush}"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="Foreground" Value="{StaticResource TwitterTweetBackgroundBrush}"/>
 
         <Setter Property="Left" Value="0"/>
@@ -93,7 +92,7 @@
     <Style x:Key="DefaultButtonStyle" TargetType="{x:Type Button}">
         <Setter Property="Background" Value="{StaticResource TwitterTweetBackgroundBrush}"/>
         <Setter Property="BorderBrush" Value="{StaticResource OpaqueGrayBrush}"/>
-        <Setter Property="BorderThickness" Value="2"/>
+        <Setter Property="BorderThickness" Value="0"/>
         <Setter Property="Border.CornerRadius" Value="0"/>
         
         <Setter Property="FontSize" Value="14"/>
@@ -272,7 +271,7 @@
         <Setter Property="TextBlock.TextDecorations" Value="Underline"/>
         <Setter Property="TextBlock.TextTrimming" Value="CharacterEllipsis"/>
         <Setter Property="FontSize" Value="20"/>
-        <Setter Property="FontFamily" Value="Billabong"/>
+        <Setter Property="FontFamily" Value="{StaticResource Billabong}"/>
         
         <Setter Property="HorizontalAlignment" Value="Center"/>
         <Setter Property="VerticalAlignment" Value="Center"/>
