--- a/Itgm/Itgm/Views/ContentPage.xaml
+++ b/Itgm/Itgm/Views/ContentPage.xaml
@@ -129,6 +129,9 @@
             <ListViewItem>
                 <Image Source="..\\Images/comments.ico"/>
             </ListViewItem>
+            <ListViewItem>
+                <Image Source="..\\Images/comments.ico"/>
+            </ListViewItem>
         </ListView>
         <ContentControl Grid.Row="1" Grid.Column="1" Margin="0,5,5,5" Content="{Binding CurrentContent, Mode=OneWay}"/>
     </Grid>
