--- a/Itgm/Itgm/Views/DirectView.xaml
+++ b/Itgm/Itgm/Views/DirectView.xaml
@@ -10,117 +10,243 @@
              d:DataContext="{d:DesignInstance vm:DirectViewModel}"
              MinHeight="500">
     <Grid>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition MinWidth="400" MaxWidth="480" Width="auto"/>
+            <ColumnDefinition Width="5"/>
+            <ColumnDefinition />
+        </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <ListView ItemsSource="{Binding Activity, Mode=OneTime}"
-                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
-                  ScrollViewer.VerticalScrollBarVisibility="Visible"
-                  VirtualizingPanel.ScrollUnit="Pixel"
-                  BorderThickness="0,0,0,1"
-                  Background="White">
-            <ListView.Resources>
-                <Style TargetType="{x:Type ScrollBar}">
-                    <Setter Property="Background" Value="White" />
-                    <Setter Property="BorderBrush" Value="Black" />
-                    <Setter Property="Template" Value="{StaticResource VerticalScrollBar}" />
-                </Style>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition/>
+                    <ColumnDefinition/>
+                </Grid.ColumnDefinitions>
+                
+                <TextBlock Text="{Binding UnseenCount, StringFormat=непросмотрено: {0}}"
+                           Grid.Column="0"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Margin="3,0,3,0"
+                           FontWeight="Medium"
+                           Foreground="{StaticResource TwitterAdditionalTextBrush}"
+                           FontSize="16" />
+                
+                <TextBlock Text="{Binding PendingRequestsCount, StringFormat=запросы на диалог: {0}}"
+                           Grid.Column="1"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           Margin="3,0,3,0"
+                           FontWeight="Medium"
+                           Foreground="{StaticResource TwitterAdditionalTextBrush}"
+                           FontSize="16" />
 
-                <Style TargetType="{x:Type ListViewItem}">
-                    <Setter Property="BorderThickness" Value="3" />
-                    <Setter Property="BorderBrush" Value="{StaticResource TwitterTweetBackgroundBrush}" />
-                    <Setter Property="Margin" Value="0" />
-                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
-                    <Setter Property="HorizontalAlignment" Value="Stretch" />
-                    <Setter Property="Template">
-                        <Setter.Value>
-                            <ControlTemplate>
-                                <Border Name="Border"
-                                        Padding="5"
-                                        Background="{TemplateBinding Background}"
-                                        HorizontalAlignment="Stretch"
-                                        BorderThickness="{TemplateBinding BorderThickness}"
-                                        BorderBrush="{TemplateBinding BorderBrush}">
-                                    <Grid Name="MainItemGrid" Height="45"
-                                          Background="{StaticResource TwitterTweetBackgroundBrush}"
-                                          HorizontalAlignment="Stretch">
-                                        <Grid.ColumnDefinitions>
-                                            <ColumnDefinition Width="45"/>
-                                            <ColumnDefinition Width="*"/>
-                                            <ColumnDefinition Width="45"/>
-                                        </Grid.ColumnDefinitions>
+            </Grid>
+            
+            <ListView ItemsSource="{Binding DirectThreads, Mode=OneTime}"
+                      Grid.Row="1"
+                      ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                      ScrollViewer.VerticalScrollBarVisibility="Auto"
+                      VirtualizingPanel.ScrollUnit="Pixel"
+                      SelectedItem="{Binding CurrentThread}"
+                      BorderThickness="0,0,0,1"
+                      Background="White">
+                <ListView.Resources>
+                    <Style TargetType="{x:Type ScrollBar}">
+                        <Setter Property="Background" Value="White" />
+                        <Setter Property="BorderBrush" Value="Black" />
+                        <Setter Property="Template" Value="{StaticResource VerticalScrollBar}" />
+                    </Style>
 
-                                        <Image Grid.Column="0"
-                                               Source="{Binding ProfileImage, IsAsync=True, Converter={StaticResource ImageAsyncConverter}}"
-                                               Stretch="UniformToFill"
-                                               StretchDirection="Both">
-                                        </Image>
+                    <Style TargetType="{x:Type ListViewItem}">
+                        <Setter Property="BorderThickness" Value="3" />
+                        <Setter Property="BorderBrush" Value="{StaticResource TwitterTweetBackgroundBrush}" />
+                        <Setter Property="Margin" Value="0" />
+                        <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                        <Setter Property="HorizontalAlignment" Value="Stretch" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate>
+                                    <Border Name="Border"
+                                            Padding="5"
+                                            Background="{TemplateBinding Background}"
+                                            HorizontalAlignment="Stretch"
+                                            BorderThickness="{TemplateBinding BorderThickness}"
+                                            BorderBrush="{TemplateBinding BorderBrush}">
+                                        <Grid Name="MainItemGrid" Height="45"
+                                              Background="{StaticResource TwitterTweetBackgroundBrush}"
+                                              HorizontalAlignment="Stretch">
+                                            <Grid.ColumnDefinitions>
+                                                <ColumnDefinition Width="45"/>
+                                                <ColumnDefinition Width="*"/>
+                                                <ColumnDefinition Width="45"/>
+                                            </Grid.ColumnDefinitions>
+                                            
+                                            <Grid Grid.ColumnSpan="3" Background="#34FF4F54" Visibility="{Binding HasUnseen, Converter={StaticResource BoolToVisibilityConverter}}"/>
+
+                                            <Image Grid.Column="0"
+                                                   Source="{Binding Users[0].ProfilePicture, IsAsync=True, Converter={StaticResource ImageAsyncConverter}}"
+                                                   Stretch="UniformToFill"
+                                                   StretchDirection="Both">
+                                            </Image>
+                                            
+                                            <TextBlock Text="{Binding Title}"
+                                                       Grid.Column="1"
+                                                       HorizontalAlignment="Left"
+                                                       VerticalAlignment="Top"
+                                                       Margin="3,0,3,0"
+                                                       Height="20"
+                                                       FontWeight="Medium"
+                                                       Foreground="{StaticResource TwitterAdditionalTextBrush}"
+                                                       FontSize="13" />
+                                            
+                                            <TextBlock Text="{Binding LastMessage}"
+                                                       Grid.Column="1"
+                                                       HorizontalAlignment="Left"
+                                                       VerticalAlignment="Top"
+                                                       Margin="3,20,3,0"
+                                                       FontWeight="Medium"
+                                                       Foreground="{StaticResource TwitterAdditionalTextBrush}"
+                                                       FontSize="13" />
                                     
-                                        <TextBox Grid.Column="1"
-                                                 Foreground="{StaticResource TwitterAdditionalTextBrush}"
-                                                 TextWrapping="WrapWithOverflow"
-                                                 Text="{Binding Text, Mode=OneWay}"/>
-
-                                        <Image Grid.Column="2"
-                                               Source="{Binding MediaImage, IsAsync=True, Converter={StaticResource ImageAsyncConverter}}"
-                                               Stretch="UniformToFill"
-                                               StretchDirection="Both">
-                                        </Image>
                                     
-                                        <Border Grid.ColumnSpan="3" 
-                                                BorderThickness="0,0,0,0"
-                                                BorderBrush="Silver"/>
-                                    </Grid>
-                                </Border>
-                            </ControlTemplate>
-                        </Setter.Value>
-                    </Setter>
+                                            <Border Grid.ColumnSpan="3" 
+                                                    BorderThickness="0,0,0,0"
+                                                    BorderBrush="Silver"/>
+                                        </Grid>
+                                    </Border>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
 
-                    <Style.Triggers>
-                        <Trigger Property="IsMouseOver" Value="true">
-                            <Setter Property="BorderBrush"
-                                    Value="{StaticResource TwitterMainThemeBrush}" />
-                        </Trigger>
-                    </Style.Triggers>
-                </Style>
-            </ListView.Resources>
+                        <Style.Triggers>
+                            <Trigger Property="IsMouseOver" Value="true">
+                                <Setter Property="BorderBrush" Value="{StaticResource TwitterMainThemeBrush}" />
+                            </Trigger>
+                            <Trigger Property="IsSelected" Value="true">
+                                <Setter Property="BorderBrush" Value="{StaticResource TwitterMainThemeBrush}" />
+                            </Trigger>
+                        </Style.Triggers>
+                    </Style>
+                </ListView.Resources>
 
-            <ListView.ItemsPanel>
-                <ItemsPanelTemplate>
-                    <StackPanel Orientation="Vertical"
-                                HorizontalAlignment="Stretch"
-                                VerticalAlignment="Stretch"
-                                VirtualizingPanel.ScrollUnit="Pixel" />
-                </ItemsPanelTemplate>
-            </ListView.ItemsPanel>
+                <ListView.ItemsPanel>
+                    <ItemsPanelTemplate>
+                        <StackPanel Orientation="Vertical"
+                                    HorizontalAlignment="Stretch"
+                                    VerticalAlignment="Stretch"
+                                    VirtualizingPanel.ScrollUnit="Pixel" />
+                    </ItemsPanelTemplate>
+                </ListView.ItemsPanel>
 
-        </ListView>
-        
-        <Grid Grid.Column="0" Grid.Row="1">
-            <Grid.ColumnDefinitions>
-                <ColumnDefinition/>
-                <ColumnDefinition/>
-            </Grid.ColumnDefinitions>
-            <Button Grid.Column="0"
-                    Height="40" 
-                    FontSize="16"
-                    Content="Обновить"
-                    Style="{StaticResource DefaultButtonStyle}"
-                    Command="{Binding UpdateActivitiesCommand}"/>
-        
-            <Button Grid.Column="1"
-                    Height="40" 
-                    FontSize="16"
-                    Content="Загрузить еще"
-                    Style="{StaticResource DefaultButtonStyle}"
-                    Command="{Binding LoadActivitiesCommand}"/>
+            </ListView>
         </Grid>
+        
+        <Button Grid.Column="0" Grid.Row="1"
+                Height="40" 
+                FontSize="16"
+                Content="Обновить"
+                Style="{StaticResource DefaultButtonStyle}"
+                Command="{Binding UpdateDirectCommand}"/>
 
         <v:LongProcessControl Grid.Column="0" Grid.Row="1"
                               Visibility="{Binding IsLongProcessStarted, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
                               IsColorInverted="true"
                               Margin="2,2,2,2" Height="36"/>
+        
+        <ListView Grid.Column="2"
+                  ItemsSource="{Binding CurrentThread.Messages}"
+                  Foreground="White"
+                  Margin="3,0,0,0"
+                  Padding="5, 2, 0,0"
+                  Background="#BB000000"
+                  ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+                  ScrollViewer.VerticalScrollBarVisibility="Auto"
+                  VirtualizingPanel.ScrollUnit="Pixel"
+                  BorderThickness="0">
+            
+            <ListView.Resources>
+                <Style TargetType="{x:Type ScrollBar}">
+                    <Setter Property="Background" Value="Transparent" />
+                    <Setter Property="BorderBrush" Value="White" />
+                    <Setter Property="Template" Value="{StaticResource VerticalScrollBar}" />
+                    <Setter Property="Margin" Value="0,0,0,0" />
+                </Style>
+                
+                <Style TargetType="{x:Type ListViewItem}">
+                    <Setter Property="BorderThickness" Value="2" />
+                    <!--<Setter Property="BorderBrush" Value="{StaticResource TwitterMainThemeBrush}" />-->
+                    <Setter Property="BorderBrush" Value="Transparent" />
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Setter Property="Margin" Value="3" />
+                    <Setter Property="Template">
+                        <Setter.Value>
+                            <ControlTemplate>
+                                <Border Name="Border"
+                                        Margin="{TemplateBinding Margin}"
+                                        BorderThickness="{TemplateBinding BorderThickness}"
+                                        BorderBrush="{TemplateBinding BorderBrush}">
+                                    <Grid Name="MainItemGrid"
+                                          HorizontalAlignment="Stretch">
+                                        <Grid.ColumnDefinitions>
+                                            <ColumnDefinition Width="150" />
+                                            <ColumnDefinition Width="*" />
+                                        </Grid.ColumnDefinitions>
+
+                                        <TextBlock Grid.Column="0"
+                                                   FontWeight="Medium"
+                                                   FontSize="13"
+                                                   TextAlignment="Left"
+                                                   TextWrapping="Wrap"
+                                                   Text="{Binding UserName, StringFormat={}{0}:}" />
+
+                                        <Image Grid.Column="1"
+                                               MaxHeight="140"
+                                               MaxWidth="140"
+                                               HorizontalAlignment="Left"
+                                               Source="{Binding MediaShare.Images[0].Url, IsAsync=True, Converter={StaticResource ImageAsyncConverter}}"
+                                               Stretch="UniformToFill"
+                                               StretchDirection="Both">
+                                        </Image>
+                                        <TextBox Grid.Column="1"
+                                                 TextWrapping="WrapWithOverflow"
+                                                 Text="{Binding Text}"/>
+
+                                    </Grid>
+                                </Border>
+                            </ControlTemplate>
+                        </Setter.Value>
+                    </Setter>
+                    <Style.Triggers>
+                        <Trigger Property="IsMouseOver" Value="true">
+                            <Setter Property="BorderBrush" Value="{StaticResource TwitterMainThemeBrush}" />
+                        </Trigger>
+                    </Style.Triggers>
+                </Style>
+            </ListView.Resources>
+        </ListView>
+        
+        <Button Grid.Column="2" Grid.Row="1"
+                Height="40" 
+                FontSize="16"
+                Content="Обновить"
+                Style="{StaticResource DefaultButtonStyle}"
+                Command="{Binding CurrentThread.UpdateThreadCommand}"/>
+        
+        <v:LongProcessControl Grid.Column="2" Grid.Row="1"
+                              Visibility="{Binding CurrentThread.IsLongProcessStarted, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
+                              IsColorInverted="true"
+                              Margin="2,2,2,2" Height="36"/>
+        
+        <Grid Grid.Column="1" Grid.RowSpan="2" Background="White" Opacity="0.5"/>
     </Grid>
 </UserControl>
